# clickhouse-fuzzing

./: Cargo.toml  README.md
corpus/: agg.sql  join.sql  where.sql
src/: fuzzer.rs  lib.rs  main.rs
src/mutations/: mod.rs  sql_mutations.rs
